--- a/src/pages/filter-modal/filter-modal.scss
+++ b/src/pages/filter-modal/filter-modal.scss
@@ -1,3 +1,8 @@
 page-filter-modal {
-
+    .navbarColor{
+        background-color: rgb(202, 90, 184);
+    }
+}
+div.b {
+    padding-right: 10px;
 }
