--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,27 +1,32 @@
 .home-Page {
-    background-color: #1C1C1C;
-    ion-card {
-        position: relative;
-        text-align: center;
-        max-height: 20em;
+    ion-list {
+        margin-top: 0%;
     }
-    
-    .card-title {
+    img {
+        width: 20%;
+        top: 12%;
+        right: 12%;
         position: absolute;
-        top: 36%;
-        font-size: 2.0em;
-        width: 100%;
-        font-weight: bold;
-        color: #fff;
     }
-    
-    .card-subtitle {
-        font-size: 1.0em;
-        position: absolute;
-        bottom: 5%;
-        right: 5%;
-        text-align: right;
-        width: 100%;
-        color: #fff;
+    ion-card{
+        height: 0%;
     }
+    ion-item:active {
+        background-color: rgba(247, 223, 180, 0.281) !important;
+        //transition-duration: 0ms;
+    }
+    ion-item {
+        background-color: rgb(255, 255, 255);
+        color: rgb(36, 36, 36);
+        padding-top: 10%;
+        padding-left: 7%;
+        //border-bottom: 1px solid rgb(156, 156, 156);
+    }
+    ion-title{
+        font-size: 34px;
+    }
+}
+ion-icon {
+    font-size: 25px;
+    padding-right: 5px;
 }
